--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -110,8 +110,6 @@ span.glyph + span.glyph::before {
     content: "➝\00a0";
 }
 
-.badge {
-    display: block;
-    max-width: fit-content;
-    margin-bottom: 20px;
+span.badge + p {
+    margin-top: 18px;
 }
