--- a/src/components/Submission.astro
+++ b/src/components/Submission.astro
@@ -5,7 +5,7 @@ import type {Submission} from '../utils/spell-compendium/spells';
 import Glyphs from './Glyphs.astro'
 import {slug} from "github-slugger";
 import {toTitleCase} from "../utils/text";
-import {exportToBase64} from "../utils/spell-compendium/spell-parser";
+import {exportToBase64, exportToJson} from "../utils/spell-compendium/spell-parser";
 
 type Props = Submission & {
     standalone: boolean;
@@ -22,30 +22,34 @@ const getAddonText = getMapText(addonMap);
        href={`${Astro.url}/${slug(name)}`}>#</a>
 </h2>}
 <h6 class="card-subtitle mb-2 text-body-secondary">By {author}</h6>
-{spells.map((spell, index) => {
-    const encodedJson =  exportToBase64(name, spell.glyphs)
-    const outputId = `encoded-output-${index}`;  // Unique ID for each button
-    return (
-        <div class="mb-4">
-            <h5 class="card-title mb-2">
-                <Glyphs glyphs={spell.glyphs}/>
-                {spell.glyphs.length > 10 && (
-                        <span class="badge text-bg-dark">Requires infinite spell demo</span>
-                )}
-            </h5>
-            <p class="card-text" style="white-space: pre-line;">
-                <Fragment set:html={spell.description}/>
-            </p>
-            <button
-                    class="btn btn-sm btn-outline-primary mb-2"
-                    type="button"
-                    data-encoded={encodedJson}
-                    data-output={outputId}
-            >
-                Copy Spell to Clipboard
-            </button>
-        </div>
-    );
+{spells.map(spell => {
+    const encodedJson = exportToJson(name, spell.glyphs);
+    const encoded64 =  exportToBase64(name, spell.glyphs)
+    return <div class="mb-4">
+        <h5 class="card-title mb-2">
+            <Glyphs glyphs={spell.glyphs}/>
+            {spell.glyphs.length > 10 && <span class="badge text-bg-dark">Requires infinite spell demo</span>}
+        </h5>
+        <p class="card-text" style="white-space: pre-line;">
+            <Fragment set:html={spell.description}/>
+        </p>
+        <button
+                class="btn btn-sm btn-outline-primary mb-2 me-4"
+                style="background-color: #dcb701;color: black"
+                type="button"
+                data-encoded={encoded64}
+        >
+            Copy Spell to Clipboard
+        </button>
+        <button
+                class="btn btn-sm btn-outline-primary mb-2 me-4"
+                style="background-color: #dcb701; color: black"
+                type="button"
+                data-encoded={encodedJson}
+        >
+            Copy Spell as JSON
+        </button>
+    </div>;
     })}
 
 <div>
@@ -68,7 +72,7 @@ const getAddonText = getMapText(addonMap);
                 // Optionally, you can also show a success message in the console
                 console.log('Spell copied to clipboard!', encoded);
             }
-        ).catch((err) => {
+        ).catch(err => {
             console.error("Clipboard write failed:", err);
         });
     }
