--- a/src/components/Submission.astro
+++ b/src/components/Submission.astro
@@ -51,10 +51,17 @@ const getAddonText = getMapText(addonMap);
         </button>
     </div>;
     })}
-
 <div>
     {standalone &&
             <div><span class="badge text-bg-info me-1">{toTitleCase(category)}</span></div>}
     <div>{addons.map(addon => <span class="badge text-bg-info me-1">{getAddonText(addon)}</span>)}</div>
     <div>{versions.map(version => <span class="badge text-bg-primary me-1">{version}</span>)}</div>
 </div>
+
+<div id="toast" class="toast align-items-center text-bg-dark border-0 position-fixed bottom-0 end-0 m-3" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="d-flex">
+        <div class="toast-body">Copied to clipboard!</div>
+        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+</div>
+
