--- a/src/components/Submission.astro
+++ b/src/components/Submission.astro
@@ -23,7 +23,7 @@ const getAddonText = getMapText(addonMap);
 </h2>}
 <h6 class="card-subtitle mb-2 text-body-secondary">By {author}</h6>
 {spells.map(spell => {
-    const encodedJson = exportToJson(name, spell.glyphs);
+    const encodedJson = exportToJson(name, spell.glyphs, spell.spell_color);
     const encoded64 =  exportToBase64(name, spell.glyphs)
     return <div class="mb-4">
         <h5 class="card-title mb-2">
